# EDDL_benchmarks

./: CMakeLists.txt  eddl_mnist_conv.cpp  eddl_mnist_conv_BN.cpp  eddl_mnist_mlp.cpp  keras_mnist_conv_BN.py  keras_mnist_mlp.py  res_conv.txt  res_mlp.txt
eddl/: README.txt  eddl_imdb_lstm.cpp  eddl_imdb_rnn.cpp  eddl_mnist_conv.cpp  eddl_mnist_conv_BN.cpp  eddl_mnist_mlp.cpp
keras/: keras_lstm_imdb.py  keras_mnist_conv.py  keras_rnn_imdb.py
results/: res_conv.txt  res_mlp.txt
